# payments/src/main/java/ru/yandex/practicum/payments/controller/ErrorResponse.java
@@ -1,0 +1,12 @@
+package ru.yandex.practicum.payments.controller;
+
+import lombok.Builder;
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+@Builder
+public class ErrorResponse {
+    private String message;
+}
