# payments/src/main/java/ru/yandex/practicum/payments/exception/ResourceNotFoundException.java
@@ -1,0 +1,7 @@
+package ru.yandex.practicum.payments.exception;
+
+public class ResourceNotFoundException extends RuntimeException {
+    public ResourceNotFoundException(String message) {
+        super(message);
+    }
+}
